--- a/new-site/about/book.html
+++ b/new-site/about/book.html
@@ -2,11 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>Tiny Atlas Quarterly | Editor's Letter</title>
+    <title>My Tiny Atlas: Our World Through Your Eyes</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="description" content= "Beyond gorgeous travel photography, My Tiny Atlas is the perfect guide to planning your next trip. The best gift for travelers, photographers, and creatives." />
 
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="../css/fonts.css" />
@@ -183,7 +184,7 @@
 
                         <p class="italics"> Author: Emily Nathan<br/> Publication date: 3/26/2019</p>
 
-                        <img src="images/book-spread1.jpg" alt="book spread" class="book-spread">
+                        <img src="images/book-spread1.jpg" alt="Uluru-Kata Tjuta National Park Australia" class="book-spread">
 
                         <h3>Photography:</h3>
                         <p>
@@ -205,7 +206,7 @@
                                 <li>Arielle Vey <a href="https://www.instagram.com/ariellevey">@ariellevey</a></li>
                                 <li>Aya Brackett <a href="https://www.instagram.com/ayabrackett">@ayabrackett</a></li>
                                 <li>Ayako Bielsa <a href="https://www.instagram.com/_aya.lulu_">@_aya.lulu_</a></li>
-                                <img src="images/book-spread2.jpg" alt="book spread" class="book-spread">
+                                <img src="images/book-spread2.jpg" alt="Sabancaya volcano erupting in Peru and shaded patio in Mexico City Mexico "class="book-spread">
                                 <li>Brian Flaherty <a href="https://www.instagram.com/brianflaherty">@brianflaherty</a></li>
                                 <li>Burcu Basar <a href="https://www.instagram.com/bizarrejourneys">@bizarrejourneys</a></li>
                                 <li>Cara Harman <a href="https://www.instagram.com/arrowsleadnowhere">@arrowsleadnowhere</a></li>
@@ -234,7 +235,7 @@
                                 <li>Emily Nathan <a href="https://www.instagram.com/ernathan">@ernathan</a></li>
                                 <li>Eric Flogny <a href="https://www.instagram.com/ericflogny">@ericflogny</a></li>
                                 <li>Erin Fong <a href="https://www.instagram.com/erinlovesfun">@erinlovesfun</a></li>
-                                <img src="images/book-spread3.jpg" alt="book spread" class="book-spread">
+                                <img src="images/book-spread3.jpg" alt="Cafe table in Brussels Belgium and banana bundles on display in Malaysia" class="book-spread">
                                 <li>Erin Kunkel <a href="https://www.instagram.com/erinkunkel">@erinkunkel</a></li>
                                 <li>Felix Sandmann <a href="https://www.instagram.com/felixsnd">@felixsnd</a></li>
                                 <li>Finn Beales <a href="https://www.instagram.com/finn">@finn</a></li>
@@ -334,9 +335,9 @@
                         <h3>Text and Resources special thanks to:</h3>
                         <p>Summer Sewell<br/> Charlotte Boates<br/> Lindsey Shea<br/> Rachael Medina<br / >Alexia Delgado</p>
 
-                        <img src="images/book-spread4.jpg" alt="book spread" class="book-spread">
-                        <img src="images/book-spread5.jpg" alt="book spread" class="book-spread">
-                        <img src="images/book-spread6.jpg" alt="book spread" class="book-spread">
+                        <img src="images/book-spread4.jpg" alt="Torres del Paine National Park, Chile snow top mountains" class="book-spread">
+                        <img src="images/book-spread5.jpg" alt="Mu Ko Ang Thong National Marine Park, Thailand" class="book-spread">
+                        <img src="images/book-spread6.jpg" alt="Pink RV in Texas United States and Choi Hung Estate Hong Kong" class="book-spread">
                     </div>
                 </div>
                 <!--END INTERVIEW -->
