--- a/new-site/index.html
+++ b/new-site/index.html
@@ -4,11 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Welcome to Tiny Atlas Quarterly | Remote 2018</title>
+    <title>Tiny Atlas Quarterly: A lifestyle travel magazine and creative agency.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="description" content="Tiny Atlas Quarterly is a lifestyle travel magazine filled with rich, beautiful stories that show readers how it feels to be in the places you are interested in going as well as all the information you need to get there."
-    />
+    <meta name="description" content="Bringing personal travel to life through the Tiny Atlas Quarterly magazine, events, and global adventures. Read the Remote 2018 issue online." />
     <meta name="keywords" content="photography" />
     <meta name="author" content="Tiny Atlas Quarterly" />
     <meta name="p:domain_verify" content="4bdfb37a1fe17a7d155f8f4aeb954d7e" />
@@ -76,7 +75,7 @@
 
         <div class="header-container">
             <div class="header-logo">
-                <a href="index.html"><img src="images/TAQ-logo.png" alt="" class="logo"></a>
+                <a href="index.html"><img src="images/TAQ-logo.png"  alt="Tiny Atlas Quarterly logo" class="logo"></a>
             </div>
             <div class="header-links-container">
               <!-- <span class="header-links link-active"><a href="index.html">Current Issue</a></span> -->
@@ -108,7 +107,7 @@
         </div>
 
         <div class="split cover fadeIn animated">
-            <img src="images/2018-remote-logo-v2.png" alt="" class="fadeIn animated">
+            <img src="images/2018-remote-logo-v2.png" alt="Tiny Atlas Quarterly Remote 2018 issue cover" class="fadeIn animated">
         </div>
         <div class="split content">
             <div class="intro">
@@ -117,7 +116,7 @@
                 </div>
                 <div class="description">
                     <p class="btm-padding">Tiny Atlas Quarterly is a photography-led lifestyle travel brand and social community that brings personal travel to life: in our magazine, through events and products and on immersive adventures.</p>
-                    <h3>CURRENT ISSUE: REMOTE 2018</h3>
+                    <h1>CURRENT ISSUE: REMOTE 2018</h1>
                     <p><a href="about/editors-letter.html">Editor's Letter</a> / <a href="about/masthead.html">Masthead</a></p>
                 </div>
             </div>
@@ -126,9 +125,9 @@
 
               <div class="feature-card feature-large">
                   <a href="new-zealand/index.html">
-                      <img src="images/nz-feature2.jpg" alt="" class="preview" />
+                      <img src="images/nz-feature2.jpg" alt="New Zealand mountain landscape with herd of sheep" class="preview" />
                       <div class="info">
-                          <img src="new-zealand/images/nz-title.png" alt="" class="title" style="width:260px;"/>
+                          <img src="new-zealand/images/nz-title.png" alt="New Zealand text" class="title" style="width:260px;"/>
                           <p class="text">A journey through vast expanses of super natural beauty, a place where fjords sit like monuments and white-tufted tui birds circle high overhead.</p>
                           <div class="meta">Travel Log<span>4.22.2018</span></div>
                       </div>
@@ -137,9 +136,10 @@
 
               <div class="feature-card feature-large">
                   <a href="oahu/index.html">
-                      <img src="images/oahu-feature.jpg" alt="" class="preview" />
+                      <img src="images/oahu-feature.jpg" alt="Cove with girl swimming in Oahua island in the Central Pacific"
+ class="preview" />
                       <div class="info">
-                          <img src="images/oahu-title.png" alt="" class="title" />
+                          <img src="images/oahu-title.png" alt="Oahu text" class="title" />
                           <p class="text">Discover the fresh faces of Oahu - whether freediving or haku lei-making – these locals embody the tradition and community that shape the island.</p>
                           <div class="meta">Travel Log<span>4.22.2018</span></div>
                       </div>
@@ -148,9 +148,9 @@
 
               <div class="feature-card feature-small">
                   <a href="maui-2018/index.html">
-                      <img src="images/maui-feature.png" alt="" class="preview" />
+                      <img src="images/maui-feature.png" alt="king protea flowers in Maui Hawaii" class="preview" />
                       <div class="info">
-                          <img src="images/maui-title.png" alt="" class="title" />
+                          <img src="images/maui-title.png" alt="Maui text" class="title" />
                           <p class="text">From jungles where wild vines reclaim paved roads, to flowing waterfalls and lush National Parks, Maui’s natural wonders await.</p>
                           <div class="meta">beauty<span>4.22.2018</span></div>
                       </div>
@@ -159,9 +159,9 @@
 
                 <div class="feature-card feature-small">
                     <a href="kona-2018/index.html">
-                        <img src="images/kona-feature.png" alt="" class="preview" />
+                        <img src="images/kona-feature.png" alt="Volcanic scene in Kona Hawaii" class="preview" />
                         <div class="info">
-                            <img src="images/kona-title.png" alt="" class="title" />
+                            <img src="images/kona-title.png" alt="Kona text" class="title" />
                             <p class="text">Volcanic and lush; here turtles roam and lava bubbles just beneath the surface. The Big Island feels abundantly alive.</p>
                             <div class="meta">travel log<span>2.22.2018</span></div>
                         </div>
@@ -188,7 +188,7 @@
 
                 <div class="trip">
                   <a href="events/tahiti-tofino/index.html#tahiti">
-                  <img src="images/trip-preview-tahiti.jpg" alt=""class="trip-preview lazy">
+                  <img src="images/trip-preview-tahiti.jpg" alt="Ocean with shallow coral reefs in Tahiti island in French Polynesia" class="trip-preview lazy">
                     <div class="details">
                         <span class="meta">March 2017</span>
                         <h3>Tahiti</h3>
@@ -199,7 +199,7 @@
                 </div>
 
                 <div class="trip">
-                    <a href="events/tahiti-tofino/index.html#tofino"><img src="images/trip-preview-tofino.jpg" alt=""class="trip-preview lazy">
+                    <a href="events/tahiti-tofino/index.html#tofino"><img src="images/trip-preview-tofino.jpg" alt="Landscape view of Tofino Vancouver Island" class="trip-preview lazy">
                     <div class="details">
                       <span class="meta">October 2016</span>
                         <h3>Tofino</h3>
@@ -215,7 +215,7 @@
 
         <div class="section">
           <div class="section-shop">
-            <img src="about/images/MyTinyAtlas-3DBook.jpg" alt="Solas Bag Image" class="lazy">
+            <img src="about/images/MyTinyAtlas-3DBook.jpg" alt="My Tiny Atlas book cover" class="lazy">
             <div class="shop-info">
               <h3>My Tiny Atlas:<br />Our World Through Your Eyes</h3>
               <p>A wanderlust-inspiring and transporting collection of photos from some of the world's most astounding places.</p>
@@ -256,20 +256,22 @@
 
             <div class="issue">
                 <a href="2017-city.html">
-                  <img src="images/tiny-atlas-cover-city-2017.jpg" alt="">
+                  <img src="images/tiny-atlas-cover-city-2017.jpg" alt="Tiny Atlas Quarterly City 2017 issue cover">
                 </a>
             </div>
 
 
             <div class="issue">
                 <a href="previous-issues.html#westcoast-2016">
-                  <img src="images/tiny-atlas-cover-west-coast-2016.jpg" alt="" class="lazy">
+                  <img src="images/tiny-atlas-cover-west-coast-2016.jpg" alt="Tiny Atlas Quarterly West Coast 2016 issue cover"
+ class="lazy">
                 </a>
             </div>
 
             <div class="issue">
                 <a href="previous-issues.html#earth-2015">
-                  <img src="images/tiny-atlas-cover-earth-2015.jpg" alt="" class="lazy">
+                  <img src="images/tiny-atlas-cover-earth-2015.jpg" alt="Tiny Atlas Quarterly Earth 2015 issue"
+ class="lazy">
                 </a>
             </div>
 
