--- a/new-site/events/patagonia/index.html
+++ b/new-site/events/patagonia/index.html
@@ -54,7 +54,7 @@
       <span class="header-links list-triangle"><a href="../index.html">Events</a>
         <ul>
           <li><a href="index.html" class="link-active">Patagonia</a></li>
-          <li><a href="events/lummi-island/index.html">Lummi Island</a></li>
+          <li><a href="../lummi-island/index.html">Lummi Island</a></li>
           <li><a href="../mendocino/index.html">Mendocino</a></li>
           <li><a href="../alohilani-giveaway/index.html">Alohilani</a></li>
           <li><a href="../climate/index.html">Climate</a></li>
