--- a/new-site/about/book.html
+++ b/new-site/about/book.html
@@ -175,7 +175,9 @@
 
                         <h2 class="with-ill"><span style="font-size:53px">My Tiny Atlas:</span><br/> Our World Through Your Eyes</h2>
 
-                        <p> Available for preorder now.<br/><a href="http://bit.ly/tinyatlasbook">Domestic Preorder </a><br/>
+                        <p> Available for preorder now.<br/>
+                          <a href="https://www.amazon.com/My-Tiny-Atlas-World-Through/dp/0399582266/ref=sr_1_fkmrnull_1?crid=3SYGYL2YVO0BI&keywords=my+tiny+atlas&qid=1550088179&s=gateway&sprefix=my+tiny%2Caps%2C198&sr=8-1-fkmrnull">Amazon</a>
+                          <a href="http://bit.ly/tinyatlasbook">Domestic Preorder </a><br/>
                           <a href="http://hyperurl.co/tinyatlas">International Preoder</a> </p>
 
                         <p>A wanderlust-inspiring and transporting collection of photos from some of the world's most astounding places, organized thematically--vistas, sunrises and sunsets, city streets and urban life, tropical jungles, dramatic architectural facades, food stalls and restaurants, and more--from the premier online curator of travel photography.</p>
