--- a/new-site/about/index.html
+++ b/new-site/about/index.html
@@ -168,9 +168,11 @@
                          <a href="mailto:info@tinyatlasquarterly.com?Subject=Tiny%20Atlas%20Quarterly">info@tinyatlasquarterly.com</a>
                        </p>
 
-                      <p>Press Inquries 	&amp; Ad Sales<br/>
-                      <a href="mailto:hello@ohanacommunications.com?Subject=Tiny%20Atlas%20Quarterly">Mr. Robbie Woodward or Ms. Flora Bertetti
-                      <br/>at Ohana Communications</a></p>
+                      <p>Marketing Partnerships and Opportunities<br/>
+                      <a href="mailto:Eleanor.Thacher@tenspeed.com?Subject=Tiny%20Atlas%20Quarterly">Eleanor Thacher</a></p>
+
+                      <p>Press and Event Requests<br/>
+                      <a href="mailto:egelbard@penguinrandomhouse.com?Subject=Tiny%20Atlas%20Quarterly">Erica Gelbard</a></p>
 
                       <p><a href="stockists.html">Stockists</a></p>
 
