--- a/new-site/events/lummi-island/index.html
+++ b/new-site/events/lummi-island/index.html
@@ -54,6 +54,7 @@
 
             <span class="header-links list-triangle"><a href="../index.html">Events</a>
                   <ul>
+                    <li><a href="../patagonia/index.html">Patagonia</a></li>
                     <li><a href="index.html" class="link-active">Lummis Island</a></li>
                     <li><a href="../mendocino/index.html">Mendocino</a></li>
                     <li><a href="../alohilani-giveaway/index.html">Alohilani</a></li>
