link updates in events

--- a/new-site/about/book.html
+++ b/new-site/about/book.html
@@ -176,7 +176,7 @@
                         <h2 class="with-ill"><span style="font-size:53px">My Tiny Atlas:</span><br/> Our World Through Your Eyes</h2>
 
                         <p> Available for preorder now.<br/>
-                          <a href="https://www.amazon.com/My-Tiny-Atlas-World-Through/dp/0399582266/ref=sr_1_fkmrnull_1?crid=3SYGYL2YVO0BI&keywords=my+tiny+atlas&qid=1550088179&s=gateway&sprefix=my+tiny%2Caps%2C198&sr=8-1-fkmrnull">Amazon</a>
+                          <a href="https://www.amazon.com/My-Tiny-Atlas-World-Through/dp/0399582266/ref=sr_1_fkmrnull_1?crid=3SYGYL2YVO0BI&keywords=my+tiny+atlas&qid=1550088179&s=gateway&sprefix=my+tiny%2Caps%2C198&sr=8-1-fkmrnull">Amazon</a><br/>
                           <a href="http://bit.ly/tinyatlasbook">Domestic Preorder </a><br/>
                           <a href="http://hyperurl.co/tinyatlas">International Preoder</a> </p>
 
@@ -187,7 +187,11 @@
                         <p class="italics"> Author: Emily Nathan<br/> Publication date: 3/26/2019</p>
 
                         <img src="images/book-spread1.jpg" alt="Uluru-Kata Tjuta National Park Australia" class="book-spread">
-
+  <img src="images/book-spread2.jpg" alt="Sabancaya volcano erupting in Peru and shaded patio in Mexico City Mexico "class="book-spread">
+  <img src="images/book-spread3.jpg" alt="Cafe table in Brussels Belgium and banana bundles on display in Malaysia" class="book-spread">
+  <img src="images/book-spread4.jpg" alt="Torres del Paine National Park, Chile snow top mountains" class="book-spread">
+  <img src="images/book-spread5.jpg" alt="Mu Ko Ang Thong National Marine Park, Thailand" class="book-spread">
+  <img src="images/book-spread6.jpg" alt="Pink RV in Texas United States and Choi Hung Estate Hong Kong" class="book-spread">
                         <h3>Photography:</h3>
                         <p>
                             <ul id="photographers">
@@ -208,7 +212,6 @@
                                 <li>Arielle Vey <a href="https://www.instagram.com/ariellevey">@ariellevey</a></li>
                                 <li>Aya Brackett <a href="https://www.instagram.com/ayabrackett">@ayabrackett</a></li>
                                 <li>Ayako Bielsa <a href="https://www.instagram.com/_aya.lulu_">@_aya.lulu_</a></li>
-                                <img src="images/book-spread2.jpg" alt="Sabancaya volcano erupting in Peru and shaded patio in Mexico City Mexico "class="book-spread">
                                 <li>Brian Flaherty <a href="https://www.instagram.com/brianflaherty">@brianflaherty</a></li>
                                 <li>Burcu Basar <a href="https://www.instagram.com/bizarrejourneys">@bizarrejourneys</a></li>
                                 <li>Cara Harman <a href="https://www.instagram.com/arrowsleadnowhere">@arrowsleadnowhere</a></li>
@@ -237,7 +240,7 @@
                                 <li>Emily Nathan <a href="https://www.instagram.com/ernathan">@ernathan</a></li>
                                 <li>Eric Flogny <a href="https://www.instagram.com/ericflogny">@ericflogny</a></li>
                                 <li>Erin Fong <a href="https://www.instagram.com/erinlovesfun">@erinlovesfun</a></li>
-                                <img src="images/book-spread3.jpg" alt="Cafe table in Brussels Belgium and banana bundles on display in Malaysia" class="book-spread">
+
                                 <li>Erin Kunkel <a href="https://www.instagram.com/erinkunkel">@erinkunkel</a></li>
                                 <li>Felix Sandmann <a href="https://www.instagram.com/felixsnd">@felixsnd</a></li>
                                 <li>Finn Beales <a href="https://www.instagram.com/finn">@finn</a></li>
@@ -337,9 +340,7 @@
                         <h3>Text and Resources special thanks to:</h3>
                         <p>Summer Sewell<br/> Charlotte Boates<br/> Lindsey Shea<br/> Rachael Medina<br / >Alexia Delgado</p>
 
-                        <img src="images/book-spread4.jpg" alt="Torres del Paine National Park, Chile snow top mountains" class="book-spread">
-                        <img src="images/book-spread5.jpg" alt="Mu Ko Ang Thong National Marine Park, Thailand" class="book-spread">
-                        <img src="images/book-spread6.jpg" alt="Pink RV in Texas United States and Choi Hung Estate Hong Kong" class="book-spread">
+
                     </div>
                 </div>
                 <!--END INTERVIEW -->
