--- a/new-site/events/alohilani-giveaway/index.html
+++ b/new-site/events/alohilani-giveaway/index.html
@@ -46,7 +46,7 @@
 
             <span class="header-links list-triangle"><a href="../index.html">Events</a>
                   <ul>
-                    <li><a href="../patagonia/index.html">Patagonia</a></li>
+                    <li><a href="../mexico/index.html">Playa Viva</a></li> <li><a href="../patagonia/index.html">Patagonia</a></li>
                     <li><a href="../lummi-island/index.html">Lummi Island</a></li>
                     <li><a href="../mendocino/index.html">Mendocino</a></li>
                     <li><a href="index.html" class="link-active">Alohilani</a></li>
