--- a/new-site/events/index.html
+++ b/new-site/events/index.html
@@ -46,6 +46,8 @@
 
             <span class="header-links list-triangle"><a href="index.html" class="link-active">Events</a>
                   <ul>
+                    <li><a href="mexico/index.html">Playa Viva</a></li>
+                    <li><a href="patagonia/index.html">Patagonia</a></li>
                     <li><a href="lummi-island/index.html">Lummi Island</a></li>
                     <li><a href="mendocino/index.html">Mendocino</a></li>
                     <li><a href="alohilani-giveaway/index.html">Alohilani</a></li>
