--- a/new-site/index.html
+++ b/new-site/index.html
@@ -90,6 +90,7 @@
 
             <span class="header-links list-triangle"><a href="events/index.html">Events</a>
                   <ul>
+                    <li><a href="events/mexico/index.html">Playa Viva</a></li>
                     <li><a href="events/patagonia/index.html">Patagonia</a></li>
                     <li><a href="events/lummi-island/index.html">Lummi Island</a></li>
                     <li><a href="events/mendocino/index.html">Mendocino</a></li>
