update mexico photographers

--- a/new-site/events/mexico/index.html
+++ b/new-site/events/mexico/index.html
@@ -196,18 +196,27 @@
 
       <p><a href="https://tinyatlasquarterly.com"><strong>Tiny Atlas Quarterly</strong></a> is a lifestyle travel magazine founded in 2012 by photographer Emily Nathan. Today we produce editorial content, trips, photo shows, and are launching our first book <a href="https://tinyatlasquarterly.com/about/book.html">My Tiny Atlas: Our World Through Your Eyes</a> on March 26th where books are sold. We have an <a href="https://www.instagram.com/tinyatlasquarterly/">Instagram community of 145k</a>, and a hashtag <a href="https://www.instagram.com/explore/tags/mytinyatlas/">#mytinyatlas</a> with over 7 million posts to date.</p>
 
-      <h4>Photographers Joining our Team at Playa Viva</h4>
-      <p><strong>Ana Linares</strong></p>
-      <p>Ana Linares, also known as <a href="https://www.instagram.com/ananewyork/">@ananewyork</a> lived and worked in NYC for 14 years, most recently at Ralph Lauren Home before she left to pursue her dream of being a full-time photographer. She now travels the globe while keeping both New York City and Miami as her home base for her business <a href="https://ananewyork.com/">Ana New York</a>.</p>
+      <h4>Photographers Joining our Team at Playa Viva:</h4>
+      <p><strong>Gabe Flores</strong></p>
+      <p><a href="https://www.instagram.com/_gabrielflores/">Gabe Flores</a> is a photographer based in Brooklyn with roots in the Southwest. Gabe's film and digital work resonate with an interplay of pathos and optimism, often tipping the scale towards a found beauty in the natural world and textured mix of honest portraiture of people from all walks of life.</p>
+
+      <p><strong>Sophia Roe</strong></p>
+      <p><a href="https://www.instagram.com/sophia_roe/">Sophia Roe</a> is a New York City based chef, writer, and incredible storyteller with a focus on emotional honesty and connection with her ever growing community who are always checking in with her as a guiding light for food and life inspiration. She has built a strong and loyal fanbase for her actionable advice regarding self-empowerment, authenticity, and choosing happiness in the shadows of one&rsquo;s past. She is currently writing her first novel, due out in 2020.</p>
+
+      <p><strong>Meg Haywood Sullivan</strong></p>
+      <p><a href="http://www.meghaywoodsullivan.com/">Meg Haywood Sullivan</a> is a photographer &amp; environmentalist who splits her time between shooting campaigns and pushing for environmental stories through editorial features and social platforms. With her degree in Environmental Studies and nearly a decade's worth of experience as an outdoor photographer, Meg is constantly working on projects that inspire the public to care about the planet, while activating a whole new generation of environmentalists, stewards, and voters.</p>
+      <p>Meg is currently a global ambassador for the <a href="https://www.surfrider.org/">Surfrider Foundation</a>, a non-profit dedicated to the protection of our oceans through a powerful activist network, an ambassador for <a href="https://protectourwinters.org/">Protect Our Winters</a>, the premiere climate advocacy group for the winter sports community, as well an an ambassador for <a href="http://www.conservation.org/Pages/default.aspx">Conservation International</a>. Meg is also a Board member of the <a href="https://www.mountainstrust.org/">Mountains Restoration Trust </a>&amp; a member of the legendary <a href="https://explorers.org/">Explorers Club</a>.</p>
 
       <p><strong>Emily Nathan</strong></p>
-      <p><a href="https://www.emilynathan.com">Emily Nathan</a> is the founder of Tiny Atlas Quarterly, a professional lifestyle and advertising photographer based in Oakland, CA where she lives with her husband and son.</p>
+      <p><a href="https://www.emilynathan.com">Emily Nathan</a> is the founder of <a href="https://tinyatlasquarterly.com">Tiny Atlas Quarterly</a> magazine and the <a href="https://www.instagram.com/tinyatlasquarterly/?hl=en">@tinyatlasquarterly</a> Instagram community as well as the <a href="https://www.instagram.com/explore/tags/mytinyatlas/">#mytinyatlas</a> hashtag, which has low logged over 7 million posts. Emily has a background in professional lifestyle and advertising photography and is based in Oakland, CA where she lives with her husband and son. Emily is also the author of the new photo book <a href="https://www.amazon.com/My-Tiny-Atlas-World-Through/dp/0399582266"><em>My Tiny Atlas:Our World Through Your Eyes</em></a> with Ten Speed Press/Penguin Random House.</p>
 
 
       <p>RSVP as soon as possible to guarantee your spot!</p>
       <p><a href="https://upscapetravel.com/outpost/patagonia-jeinimeni/patagonia-photography/#form">Save your spot for this trip</a></p>
 
       <p><a href="https://www.regenerativeresorts.com/tiny-atlas-landing">Book Playa Viva + Tiny Atlas </a></p>
+
+      <p><i>All images courtesy of Kayla Mendez, Daniel Camarena and Victoria Gemlen courtesy of Playa Viva</i> </p>
 
 
     </div>
