--- a/new-site/about/book.html
+++ b/new-site/about/book.html
@@ -175,10 +175,10 @@
 
                         <h2 class="with-ill"><span style="font-size:53px">My Tiny Atlas:</span><br/> Our World Through Your Eyes</h2>
 
-                        <p> Available for preorder now.<br/>
+                        <p> Available now.<br/>
                           <a href="https://www.amazon.com/My-Tiny-Atlas-World-Through/dp/0399582266/ref=sr_1_fkmrnull_1?crid=3SYGYL2YVO0BI&keywords=my+tiny+atlas&qid=1550088179&s=gateway&sprefix=my+tiny%2Caps%2C198&sr=8-1-fkmrnull">Amazon</a><br/>
-                          <a href="http://bit.ly/tinyatlasbook">Domestic Preorder </a><br/>
-                          <a href="http://hyperurl.co/tinyatlas">International Preoder</a> </p>
+                          <a href="http://bit.ly/tinyatlasbook">Domestic Purchase</a><br/>
+                          <a href="http://hyperurl.co/tinyatlas">International Purchase</a> </p>
 
                         <p>A wanderlust-inspiring and transporting collection of photos from some of the world's most astounding places, organized thematically--vistas, sunrises and sunsets, city streets and urban life, tropical jungles, dramatic architectural facades, food stalls and restaurants, and more--from the premier online curator of travel photography.</p>
                         <p>As much an armchair travel companion as a guide to planning your next trip, My Tiny Atlas contains over 200 lush, surprising, and stunning photos from more than 130 photographers, along with stories about far-flung locales and tips for experiencing a new location like a local. Our book takes you to every continent and all corners of the world, from Paris, San Francisco, London, and Buenos Aires to the Arctic Circle, Tanzania, Tahiti, and Mongolia. My Tiny Atlas visually explores new destinations with an intimate, insider's view--not of the usual monuments and tourist attractions, but of the real people, mouth-watering food, verdant flora, bustling streets, wild animals, epic views, lazy rivers, architectural gems, and other details that make you feel what it's like to truly be in another place, whether or not you ever leave home.</p>
