masthead press link

--- a/new-site/about/masthead.html
+++ b/new-site/about/masthead.html
@@ -219,9 +219,8 @@
                          <a href="http://www.hannahpmode.com">Hannah Perrine Mode</a><br>
                          <a href="https://allswellcreative.com">Laura Rubin </a>
                        </p>
-                       <h3>PRESS INQUIRIES &amp; AD SALES</h3>
-                       <p><a href="mailto:hello@ohanacommunications.com?Subject=Tiny%20Atlas%20Quarterly">Mr. Robbie Woodward or Ms. Flora Bertetti
-                       <br/>at Ohana Communications</a></p>
+                       <h3>Press and Event Requests</h3>
+                       <p><a href="mailto:egelbard@penguinrandomhouse.com?Subject=Tiny%20Atlas%20Quarterly">Erica Gelbard</a></p>
                        <p class="italics">Image by: Emily Nathan</p>
 
                        </div>
