events index add patagonia trip

--- a/new-site/events/index.html
+++ b/new-site/events/index.html
@@ -63,6 +63,21 @@
         </div>
     </div>
 
+    <div class="event-bg" style="background-image: url(patagonia/images/Cover-Photo.jpg)">
+        <div class="details-card event-card">
+            <h3>Patagonia<br>Tiny Atlas x Outpost by Upscape Retreat</h3>
+            <div class="main-content">
+              <p class="info">
+                  <span class="label">When</span><br /> Unknown Patagonia: Feb 28th - March 5th, 2020 <br />
+                  Patagonia Explorer: March 5th - March 17th 2020
+              </p>
+
+                <p>Join Tiny Atlas on our return trip to Chilean Patagonia with Upscape. We’re leading two epic adventures through continuously changing and stunning terrain with unlimited opportunities for wildlife encounters, rushing water, and photography.</p>
+                <p><a class="e-link" href="patagonia/index.html">View Trip</a></p>
+            </div>
+        </div>
+    </div>
+
     <div class="event-bg" style="background-image: url(lummi-island/images/bg.jpg)">
         <div class="details-card event-card">
             <h3>Creative Retreat:<br> Lummi Island</h3>
