update to css & remove 2018

--- a/new-site/index.html
+++ b/new-site/index.html
@@ -117,7 +117,7 @@
                 </div>
                 <div class="description">
                     <p class="btm-padding">Tiny Atlas Quarterly is a photography-led lifestyle travel brand and social community that brings personal travel to life: in our magazine, through events and products and on immersive adventures.</p>
-                    <h1>CURRENT ISSUE: REMOTE 2018</h1>
+                    <h1>CURRENT ISSUE: REMOTE</h1>
                     <p><a href="about/editors-letter.html">Editor's Letter</a> / <a href="about/masthead.html">Masthead</a></p>
                 </div>
             </div>
