changed around links for shopping

--- a/new-site/about/book.html
+++ b/new-site/about/book.html
@@ -127,6 +127,8 @@
           <ul>
             <li><a href="editors-letter.html">Editor's Letter</a></li>
             <li><a href="masthead.html">Masthead</a></li>
+            <li><a href="book.html"  class="link-active">Book</a></li>
+
           </ul>
         </span>
             <span class="header-links"><a href="index.html">About</a></span>
@@ -141,7 +143,7 @@
             <li><a href="../events/montauk/index.html">Montauk Show</a></li>
           </ul>
         </span>
-            <span class="header-links link-active"><a href="book.html" target="_blank" class="link-active">Book</a>
+            <span class="header-links link-active"><a href="https://tiny-atlas-quarterly.myshopify.com/">Shop</a>
         </span>
         </div>
     </div>
