--- a/new-site/about/index.html
+++ b/new-site/about/index.html
@@ -102,6 +102,7 @@
           <ul>
             <li><a href="editors-letter.html">Editor's Letter</a></li>
             <li><a href="masthead.html">Masthead</a></li>
+<li><a href="book.html">Book</a></li>
           </ul>
         </span>
         <span class="header-links"><a href="index.html" class="link-active">About</a></span>
