--- a/new-site/events/montauk/index.html
+++ b/new-site/events/montauk/index.html
@@ -756,7 +756,7 @@ $(function() {
       <span class="header-links list-triangle"><a href="../../index.html">Current Issue</a>
        <ul>
          <li><a href="../../about/editors-letter.html">Editor's Letter</a></li>
-         <li><a href="../../about/masthead.html">Masthead</a></li>
+         <li><a href="../../about/masthead.html">Masthead</a></li> <li><a href="../../about/book.html">Book</a></li>
        </ul>
      </span>
 
@@ -774,7 +774,7 @@ $(function() {
           </ul>
         </span>
 
-        <span class="header-links"><a href="../../about/book.html">Book</a></span>
+        <span class="header-links"><a href="https://tiny-atlas-quarterly.myshopify.com/">Shop</a></span>
     </div>
 </div>
 
