--- a/new-site/index.html
+++ b/new-site/index.html
@@ -83,6 +83,7 @@
                <ul>
                  <li><a href="about/editors-letter.html">Editor's Letter</a></li>
                  <li><a href="about/masthead.html">Masthead</a></li>
+                 <li><a href="about/book.html">Book</a></li>
                </ul>
              </span>
 
@@ -103,7 +104,7 @@
                   </ul>
                 </span>
 
-                <span class="header-links"><a href="about/book.html">Book</a></span>
+                <span class="header-links"><a href="https://tiny-atlas-quarterly.myshopify.com/">Shop</a></span>
             </div>
         </div>
 
@@ -118,7 +119,7 @@
                 <div class="description">
                     <p class="btm-padding">Tiny Atlas Quarterly is a photography-led lifestyle travel brand and social community that brings personal travel to life: in our magazine, through events and products and on immersive adventures.</p>
                     <h1>CURRENT ISSUE: REMOTE</h1>
-                    <p><a href="about/editors-letter.html">Editor's Letter</a> / <a href="about/masthead.html">Masthead</a></p>
+                    <p><a href="about/editors-letter.html">Editor's Letter</a> / <a href="../about/masthead.html">Masthead</a> <a href="../about/book.html">Book</a></p>
                 </div>
             </div>
 
