--- a/new-site/js/Tiny Atlas Quarterly _ TAQ Trips.htm
+++ b/new-site/js/Tiny Atlas Quarterly _ TAQ Trips.htm
@@ -37,7 +37,7 @@
 
             <span class="header-links"><a href="about/index.html">Events</a></span>
             <span class="header-links"><a href="about/index.html">About</a></span>
-			<span class="header-links"><a href="about/masthead.html">Masthead</a></span>
+			<span class="header-links"><a href="../about/masthead.html">Masthead</a> <a href="../about/book.html">Book</a></span>
             <span class="header-links"><a href="about/stockists.html">Stockists</a></span>
             <span class="header-links"><a href="http://shop.tinyatlasquarterly.com/products/pre-order-the-printed-annual" target="_blank">Shop</a></span>
             </div>
@@ -52,7 +52,7 @@
             <span class="header-links list-triangle"><a href="../../index.html">Current Issue</a>
                <ul>
                  <li><a href="../../about/editors-letter.html">Editor's Letter</a></li>
-                 <li><a href="../../about/masthead.html">Masthead</a></li>
+                 <li><a href="../../about/masthead.html">Masthead</a></li> <li><a href="../../about/book.html">Book</a></li>
                </ul>
              </span>
 
@@ -67,7 +67,7 @@
                   </ul>
                 </span>
 
-            <span class="header-links"><a href="../../about/book.html">Book</a></span>
+            <span class="header-links"><a href="https://tiny-atlas-quarterly.myshopify.com/">Shop</a></span>
         </div>
     </div>
 
