--- a/new-site/previous-issues.html
+++ b/new-site/previous-issues.html
@@ -53,7 +53,7 @@
             <span class="header-links list-triangle"><a href="index.html">Current Issue</a>
              <ul>
                <li><a href="about/editors-letter.html">Editor's Letter</a></li>
-               <li><a href="about/masthead.html">Masthead</a></li>
+               <li><a href="../about/masthead.html">Masthead</a> <a href="../about/book.html">Book</a></li>
              </ul>
            </span>
 
