--- a/new-site/events/index.html
+++ b/new-site/events/index.html
@@ -38,7 +38,7 @@
             <span class="header-links list-triangle"><a href="../index.html">Current Issue</a>
                <ul>
                  <li><a href="../about/editors-letter.html">Editor's Letter</a></li>
-                 <li><a href="../about/masthead.html">Masthead</a></li>
+                 <li><a href="../about/masthead.html">Masthead</a> <a href="../about/book.html">Book</a></li>
                </ul>
              </span>
 
@@ -59,7 +59,7 @@
                   </ul>
                 </span>
 
-            <span class="header-links"><a href="../about/book.html">Book</a></span>
+            <span class="header-links"><a href="https://tiny-atlas-quarterly.myshopify.com/">Shop</a></span>
         </div>
     </div>
 
