--- a/new-site/events/tahiti-tofino/index-.html
+++ b/new-site/events/tahiti-tofino/index-.html
@@ -35,7 +35,7 @@ $(document).on("ready", function() {
 
             <span class="header-links"><a href="about/index.html">Events</a></span>
             <span class="header-links"><a href="about/index.html">About</a></span>
-			<span class="header-links"><a href="about/masthead.html">Masthead</a></span>
+			<span class="header-links"><a href="../about/masthead.html">Masthead</a> <a href="../about/book.html">Book</a></span>
             <span class="header-links"><a href="about/stockists.html">Stockists</a></span>
             <span class="header-links"><a href="http://shop.tinyatlasquarterly.com/products/pre-order-the-printed-annual" target="_blank">Shop</a></span>
             </div>
