--- a/new-site/events/tahiti-tofino/index.html
+++ b/new-site/events/tahiti-tofino/index.html
@@ -42,7 +42,7 @@
 
             <span class="header-links"><a href="about/index.html">Events</a></span>
             <span class="header-links"><a href="about/index.html">About</a></span>
-			<span class="header-links"><a href="about/masthead.html">Masthead</a></span>
+			<span class="header-links"><a href="../about/masthead.html">Masthead</a> <a href="../about/book.html">Book</a></span>
             <span class="header-links"><a href="about/stockists.html">Stockists</a></span>
             <span class="header-links"><a href="http://shop.tinyatlasquarterly.com/products/pre-order-the-printed-annual" target="_blank">Shop</a></span>
             </div>
@@ -57,7 +57,7 @@
               <span class="header-links list-triangle"><a href="../../index.html">Current Issue</a>
                <ul>
                  <li><a href="../../about/editors-letter.html">Editor's Letter</a></li>
-                 <li><a href="../../about/masthead.html">Masthead</a></li>
+                 <li><a href="../../about/masthead.html">Masthead</a></li> <li><a href="../../about/book.html">Book</a></li>
                </ul>
              </span>
 
@@ -75,7 +75,7 @@
                   </ul>
                 </span>
 
-                <span class="header-links"><a href="../../about/book.html">Book</a></span>
+                <span class="header-links"><a href="https://tiny-atlas-quarterly.myshopify.com/">Shop</a></span>
             </div>
         </div>
 
